Modificados algunos estilos de los botones

--- a/ProyectoNetbeans/assets/components/blog_home/blog.html
+++ b/ProyectoNetbeans/assets/components/blog_home/blog.html
@@ -23,20 +23,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" defer></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js" defer></script>
     <script src="./controller.js"></script>
-    <style>
-        /* Note: Try to remove the following lines to see the effect of CSS positioning */
-        
-        .affix {
-            top: 0;
-            width: 100%;
-            z-index: 9999 !important;
-            background-color: white;
-        }
-        
-        .affix+.container-fluid {
-            padding-top: 70px;
-        }
-    </style>
     <!-- Mail -->
     <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
     <script type="text/javascript">
@@ -52,7 +38,7 @@
 
     <!-- SECCION CABECERA -->
     <div class="container-fluid hidden-xs " id="top">
-        <div class="container">
+        <div class="container-fluid">
             <i class="fa fa-phone"></i> 942 12 34 56
             <i class="fa fa-envelope"></i> chachachachi.limpieza@gmail.com
 
