--- a/ProyectoNetbeans/assets/components/blog_home/blog.html
+++ b/ProyectoNetbeans/assets/components/blog_home/blog.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chacha Chachi - Inés Carazo Núñez</title>
-
+    <link href="../../images/icono/ico/favicon.ico" rel="SHORTCUT ICON">
     <!-- Font cousine -->
     <link href="https://fonts.googleapis.com/css?family=Cousine" rel="stylesheet">
     <!--Fontawesome-->
